--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -125,7 +125,7 @@ xss:
 # 代码生成
 gen: 
   # 作者
-  author: aaa
+  author: teacherChen
   # 默认生成包路径 system 需改成自己的模块名称 如 system monitor tool
   packageName: com.aaa.project.system
   # 自动去除表前缀，默认是true
